fixes right side alignment in post box forms

--- a/app/stylesheets/main_page/post_box.css.sass
+++ b/app/stylesheets/main_page/post_box.css.sass
@@ -48,7 +48,7 @@
     float: left
     margin-left: 15px
     margin-top: 15px
-    width: 300px
+    width: 305px
 
     form
       +form
@@ -58,11 +58,11 @@
         display: block
 
       input[type=text]
-        width: 290px
+        width: 285px
 
       textarea
         margin-top: 15px
-        width: 290px
+        width: 285px
         height: 100px
 
       label.radio
